# cuqoi

./: .gitattributes  CMakeLists.txt  README.md  vcpkg.json
include/: cuqoi.hpp
sample/: CMakeLists.txt  encoder.cpp
src/: CMakeLists.txt  cuqoi.cu
test/: CMakeLists.txt  main.cpp
